// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests variable expressions test intermediate representation 1`] = `
ModuleExpression {
  "exportExpressions": [],
  "exportableFuncs": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 70,
            "lexeme": "i32.const",
            "line": 4,
            "opcodeType": 55,
            "type": "CONST",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 70,
              "lexeme": "i32.const",
              "line": 4,
              "opcodeType": 55,
              "type": "CONST",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 73,
            "lexeme": "10",
            "line": 4,
            "opcodeType": null,
            "type": "NAT",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 73,
              "lexeme": "10",
              "line": 4,
              "opcodeType": null,
              "type": "NAT",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 87,
            "lexeme": "local.set",
            "line": 5,
            "opcodeType": 26,
            "type": "local.set",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 87,
              "lexeme": "local.set",
              "line": 5,
              "opcodeType": 26,
              "type": "local.set",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 92,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 92,
              "lexeme": "$var",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 106,
            "lexeme": "local.get",
            "line": 6,
            "opcodeType": 25,
            "type": "local.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 106,
              "lexeme": "local.get",
              "line": 6,
              "opcodeType": 25,
              "type": "local.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 111,
            "lexeme": "$var",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [
          "$var",
        ],
        "localTypes": [
          0,
        ],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "exportableGlobals": [],
  "exportableMems": [],
  "exportableTables": [],
  "functions": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 70,
            "lexeme": "i32.const",
            "line": 4,
            "opcodeType": 55,
            "type": "CONST",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 70,
              "lexeme": "i32.const",
              "line": 4,
              "opcodeType": 55,
              "type": "CONST",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 73,
            "lexeme": "10",
            "line": 4,
            "opcodeType": null,
            "type": "NAT",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 73,
              "lexeme": "10",
              "line": 4,
              "opcodeType": null,
              "type": "NAT",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 87,
            "lexeme": "local.set",
            "line": 5,
            "opcodeType": 26,
            "type": "local.set",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 87,
              "lexeme": "local.set",
              "line": 5,
              "opcodeType": 26,
              "type": "local.set",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 92,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 92,
              "lexeme": "$var",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 106,
            "lexeme": "local.get",
            "line": 6,
            "opcodeType": 25,
            "type": "local.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 106,
              "lexeme": "local.get",
              "line": 6,
              "opcodeType": 25,
              "type": "local.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 111,
            "lexeme": "$var",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [
          "$var",
        ],
        "localTypes": [
          0,
        ],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "globalTypes": [
    SignatureType {
      "_paramTypes": [],
      "_returnTypes": [
        0,
      ],
    },
  ],
  "globals": [],
  "imports": [],
  "memory": null,
  "start": null,
}
`;

exports[`snapshot tests variable expressions test intermediate representation 2`] = `
ModuleExpression {
  "exportExpressions": [],
  "exportableFuncs": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          UnfoldedTokenExpression {
            "_parent": [Circular],
            "expr": [
              IRToken {
                "_parent": [Circular],
                "_prevToken": null,
                "col": 0,
                "indexInSource": 71,
                "lexeme": "i32.const",
                "line": 4,
                "opcodeType": 55,
                "type": "CONST",
                "valueType": null,
              },
              IRToken {
                "_parent": [Circular],
                "_prevToken": Token {
                  "col": 0,
                  "indexInSource": 71,
                  "lexeme": "i32.const",
                  "line": 4,
                  "opcodeType": 55,
                  "type": "CONST",
                  "valueType": null,
                },
                "col": 0,
                "indexInSource": 74,
                "lexeme": "10",
                "line": 4,
                "opcodeType": null,
                "type": "NAT",
                "valueType": null,
              },
            ],
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 89,
            "lexeme": "local.tee",
            "line": 5,
            "opcodeType": 27,
            "type": "local.tee",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 89,
              "lexeme": "local.tee",
              "line": 5,
              "opcodeType": 27,
              "type": "local.tee",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 94,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [
          "$var",
        ],
        "localTypes": [
          0,
        ],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "exportableGlobals": [],
  "exportableMems": [],
  "exportableTables": [],
  "functions": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          UnfoldedTokenExpression {
            "_parent": [Circular],
            "expr": [
              IRToken {
                "_parent": [Circular],
                "_prevToken": null,
                "col": 0,
                "indexInSource": 71,
                "lexeme": "i32.const",
                "line": 4,
                "opcodeType": 55,
                "type": "CONST",
                "valueType": null,
              },
              IRToken {
                "_parent": [Circular],
                "_prevToken": Token {
                  "col": 0,
                  "indexInSource": 71,
                  "lexeme": "i32.const",
                  "line": 4,
                  "opcodeType": 55,
                  "type": "CONST",
                  "valueType": null,
                },
                "col": 0,
                "indexInSource": 74,
                "lexeme": "10",
                "line": 4,
                "opcodeType": null,
                "type": "NAT",
                "valueType": null,
              },
            ],
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 89,
            "lexeme": "local.tee",
            "line": 5,
            "opcodeType": 27,
            "type": "local.tee",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 89,
              "lexeme": "local.tee",
              "line": 5,
              "opcodeType": 27,
              "type": "local.tee",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 94,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [
          "$var",
        ],
        "localTypes": [
          0,
        ],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "globalTypes": [
    SignatureType {
      "_paramTypes": [],
      "_returnTypes": [
        0,
      ],
    },
  ],
  "globals": [],
  "imports": [],
  "memory": null,
  "start": null,
}
`;

exports[`snapshot tests variable expressions test intermediate representation 3`] = `
ModuleExpression {
  "exportExpressions": [],
  "exportableFuncs": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 120,
            "lexeme": "global.get",
            "line": 5,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 120,
              "lexeme": "global.get",
              "line": 5,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 125,
            "lexeme": "$one",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 125,
              "lexeme": "$one",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 140,
            "lexeme": "global.get",
            "line": 6,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 140,
              "lexeme": "global.get",
              "line": 6,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 145,
            "lexeme": "$two",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 145,
              "lexeme": "$two",
              "line": 6,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 157,
            "lexeme": "i32.add",
            "line": 7,
            "opcodeType": 96,
            "type": "BINARY",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [],
        "localTypes": [],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "exportableGlobals": [
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 38,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 41,
        "lexeme": "10",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 18,
        "lexeme": "global",
        "line": 2,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": false,
      "name": "$one",
      "type": 0,
    },
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 73,
        "lexeme": "i32.const",
        "line": 3,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 76,
        "lexeme": "10",
        "line": 3,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 53,
        "lexeme": "global",
        "line": 3,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": false,
      "name": "$two",
      "type": 0,
    },
  ],
  "exportableMems": [],
  "exportableTables": [],
  "functions": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 120,
            "lexeme": "global.get",
            "line": 5,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 120,
              "lexeme": "global.get",
              "line": 5,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 125,
            "lexeme": "$one",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 125,
              "lexeme": "$one",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 140,
            "lexeme": "global.get",
            "line": 6,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 140,
              "lexeme": "global.get",
              "line": 6,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 145,
            "lexeme": "$two",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 145,
              "lexeme": "$two",
              "line": 6,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 157,
            "lexeme": "i32.add",
            "line": 7,
            "opcodeType": 96,
            "type": "BINARY",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [],
        "localTypes": [],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "globalTypes": [
    SignatureType {
      "_paramTypes": [],
      "_returnTypes": [
        0,
      ],
    },
  ],
  "globals": [
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 38,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 41,
        "lexeme": "10",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 18,
        "lexeme": "global",
        "line": 2,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": false,
      "name": "$one",
      "type": 0,
    },
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 73,
        "lexeme": "i32.const",
        "line": 3,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 76,
        "lexeme": "10",
        "line": 3,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 53,
        "lexeme": "global",
        "line": 3,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": false,
      "name": "$two",
      "type": 0,
    },
  ],
  "imports": [],
  "memory": null,
  "start": null,
}
`;

exports[`snapshot tests variable expressions test intermediate representation 4`] = `
ModuleExpression {
  "exportExpressions": [],
  "exportableFuncs": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 89,
            "lexeme": "i32.const",
            "line": 4,
            "opcodeType": 55,
            "type": "CONST",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 89,
              "lexeme": "i32.const",
              "line": 4,
              "opcodeType": 55,
              "type": "CONST",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 92,
            "lexeme": "10",
            "line": 4,
            "opcodeType": null,
            "type": "NAT",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 92,
              "lexeme": "10",
              "line": 4,
              "opcodeType": null,
              "type": "NAT",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 107,
            "lexeme": "global.set",
            "line": 5,
            "opcodeType": 29,
            "type": "global.set",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 107,
              "lexeme": "global.set",
              "line": 5,
              "opcodeType": 29,
              "type": "global.set",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 112,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 112,
              "lexeme": "$var",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 127,
            "lexeme": "global.get",
            "line": 6,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 127,
              "lexeme": "global.get",
              "line": 6,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 132,
            "lexeme": "$var",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [],
        "localTypes": [],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "exportableGlobals": [
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 44,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 46,
        "lexeme": "0",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 18,
        "lexeme": "global",
        "line": 2,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": true,
      "name": "$var",
      "type": 0,
    },
  ],
  "exportableMems": [],
  "exportableTables": [],
  "functions": [
    FunctionExpression {
      "_parent": undefined,
      "body": UnfoldedTokenExpression {
        "_parent": [Circular],
        "expr": [
          IRToken {
            "_parent": [Circular],
            "_prevToken": null,
            "col": 0,
            "indexInSource": 89,
            "lexeme": "i32.const",
            "line": 4,
            "opcodeType": 55,
            "type": "CONST",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 89,
              "lexeme": "i32.const",
              "line": 4,
              "opcodeType": 55,
              "type": "CONST",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 92,
            "lexeme": "10",
            "line": 4,
            "opcodeType": null,
            "type": "NAT",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 92,
              "lexeme": "10",
              "line": 4,
              "opcodeType": null,
              "type": "NAT",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 107,
            "lexeme": "global.set",
            "line": 5,
            "opcodeType": 29,
            "type": "global.set",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 107,
              "lexeme": "global.set",
              "line": 5,
              "opcodeType": 29,
              "type": "global.set",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 112,
            "lexeme": "$var",
            "line": 5,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 112,
              "lexeme": "$var",
              "line": 5,
              "opcodeType": null,
              "type": "VAR",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 127,
            "lexeme": "global.get",
            "line": 6,
            "opcodeType": 28,
            "type": "global.get",
            "valueType": null,
          },
          IRToken {
            "_parent": [Circular],
            "_prevToken": Token {
              "col": 0,
              "indexInSource": 127,
              "lexeme": "global.get",
              "line": 6,
              "opcodeType": 28,
              "type": "global.get",
              "valueType": null,
            },
            "col": 0,
            "indexInSource": 132,
            "lexeme": "$var",
            "line": 6,
            "opcodeType": null,
            "type": "VAR",
            "valueType": null,
          },
        ],
      },
      "signature": FunctionSignature {
        "functionName": "$main",
        "inlineExportName": null,
        "localNames": [],
        "localTypes": [],
        "paramNames": [],
        "signatureType": SignatureType {
          "_paramTypes": [],
          "_returnTypes": [
            0,
          ],
        },
      },
    },
  ],
  "globalTypes": [
    SignatureType {
      "_paramTypes": [],
      "_returnTypes": [
        0,
      ],
    },
  ],
  "globals": [
    GlobalExpression {
      "_parent": null,
      "globalType": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 44,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      "globalValue": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 46,
        "lexeme": "0",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
      "headerToken": IRToken {
        "_parent": [Circular],
        "_prevToken": null,
        "col": 0,
        "indexInSource": 18,
        "lexeme": "global",
        "line": 2,
        "opcodeType": null,
        "type": "global",
        "valueType": null,
      },
      "mutability": true,
      "name": "$var",
      "type": 0,
    },
  ],
  "imports": [],
  "memory": null,
  "start": null,
}
`;

exports[`snapshot tests variable expressions test lexer 1`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 12,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 16,
    "lexeme": "func",
    "line": 2,
    "opcodeType": null,
    "type": "func",
    "valueType": 7,
  },
  Token {
    "col": 0,
    "indexInSource": 22,
    "lexeme": "$main",
    "line": 2,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 24,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 30,
    "lexeme": "result",
    "line": 2,
    "opcodeType": null,
    "type": "result",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 34,
    "lexeme": "i32",
    "line": 2,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 35,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 41,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 46,
    "lexeme": "local",
    "line": 3,
    "opcodeType": null,
    "type": "local",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 51,
    "lexeme": "$var",
    "line": 3,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 55,
    "lexeme": "i32",
    "line": 3,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 56,
    "lexeme": ")",
    "line": 3,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 70,
    "lexeme": "i32.const",
    "line": 4,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 73,
    "lexeme": "10",
    "line": 4,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 87,
    "lexeme": "local.set",
    "line": 5,
    "opcodeType": 26,
    "type": "local.set",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 92,
    "lexeme": "$var",
    "line": 5,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 106,
    "lexeme": "local.get",
    "line": 6,
    "opcodeType": 25,
    "type": "local.get",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 111,
    "lexeme": "$var",
    "line": 6,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 115,
    "lexeme": ")",
    "line": 7,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
]
`;

exports[`snapshot tests variable expressions test lexer 2`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 12,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 16,
    "lexeme": "func",
    "line": 2,
    "opcodeType": null,
    "type": "func",
    "valueType": 7,
  },
  Token {
    "col": 0,
    "indexInSource": 22,
    "lexeme": "$main",
    "line": 2,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 24,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 30,
    "lexeme": "result",
    "line": 2,
    "opcodeType": null,
    "type": "result",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 34,
    "lexeme": "i32",
    "line": 2,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 35,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 41,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 46,
    "lexeme": "local",
    "line": 3,
    "opcodeType": null,
    "type": "local",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 51,
    "lexeme": "$var",
    "line": 3,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 55,
    "lexeme": "i32",
    "line": 3,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 56,
    "lexeme": ")",
    "line": 3,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 62,
    "lexeme": "(",
    "line": 4,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 71,
    "lexeme": "i32.const",
    "line": 4,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 74,
    "lexeme": "10",
    "line": 4,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 75,
    "lexeme": ")",
    "line": 4,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 89,
    "lexeme": "local.tee",
    "line": 5,
    "opcodeType": 27,
    "type": "local.tee",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 94,
    "lexeme": "$var",
    "line": 5,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 98,
    "lexeme": ")",
    "line": 6,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
]
`;

exports[`snapshot tests variable expressions test lexer 3`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 12,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 18,
    "lexeme": "global",
    "line": 2,
    "opcodeType": null,
    "type": "global",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 23,
    "lexeme": "$one",
    "line": 2,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 27,
    "lexeme": "i32",
    "line": 2,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 29,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 38,
    "lexeme": "i32.const",
    "line": 2,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 41,
    "lexeme": "10",
    "line": 2,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 42,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 43,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 47,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 53,
    "lexeme": "global",
    "line": 3,
    "opcodeType": null,
    "type": "global",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 58,
    "lexeme": "$two",
    "line": 3,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 62,
    "lexeme": "i32",
    "line": 3,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 64,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 73,
    "lexeme": "i32.const",
    "line": 3,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 76,
    "lexeme": "10",
    "line": 3,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 77,
    "lexeme": ")",
    "line": 3,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 78,
    "lexeme": ")",
    "line": 3,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 82,
    "lexeme": "(",
    "line": 4,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 86,
    "lexeme": "func",
    "line": 4,
    "opcodeType": null,
    "type": "func",
    "valueType": 7,
  },
  Token {
    "col": 0,
    "indexInSource": 92,
    "lexeme": "$main",
    "line": 4,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 94,
    "lexeme": "(",
    "line": 4,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 100,
    "lexeme": "result",
    "line": 4,
    "opcodeType": null,
    "type": "result",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 104,
    "lexeme": "i32",
    "line": 4,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 105,
    "lexeme": ")",
    "line": 4,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 120,
    "lexeme": "global.get",
    "line": 5,
    "opcodeType": 28,
    "type": "global.get",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 125,
    "lexeme": "$one",
    "line": 5,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 140,
    "lexeme": "global.get",
    "line": 6,
    "opcodeType": 28,
    "type": "global.get",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 145,
    "lexeme": "$two",
    "line": 6,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 157,
    "lexeme": "i32.add",
    "line": 7,
    "opcodeType": 96,
    "type": "BINARY",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 161,
    "lexeme": ")",
    "line": 8,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
]
`;

exports[`snapshot tests variable expressions test lexer 4`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 12,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 18,
    "lexeme": "global",
    "line": 2,
    "opcodeType": null,
    "type": "global",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 23,
    "lexeme": "$var",
    "line": 2,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 25,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 28,
    "lexeme": "mut",
    "line": 2,
    "opcodeType": null,
    "type": "mut",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 32,
    "lexeme": "i32",
    "line": 2,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 33,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 35,
    "lexeme": "(",
    "line": 2,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 44,
    "lexeme": "i32.const",
    "line": 2,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 46,
    "lexeme": "0",
    "line": 2,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 47,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 48,
    "lexeme": ")",
    "line": 2,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 52,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 56,
    "lexeme": "func",
    "line": 3,
    "opcodeType": null,
    "type": "func",
    "valueType": 7,
  },
  Token {
    "col": 0,
    "indexInSource": 62,
    "lexeme": "$main",
    "line": 3,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 64,
    "lexeme": "(",
    "line": 3,
    "opcodeType": null,
    "type": "(",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 70,
    "lexeme": "result",
    "line": 3,
    "opcodeType": null,
    "type": "result",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 74,
    "lexeme": "i32",
    "line": 3,
    "opcodeType": null,
    "type": "VALUETYPE",
    "valueType": 0,
  },
  Token {
    "col": 0,
    "indexInSource": 75,
    "lexeme": ")",
    "line": 3,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 89,
    "lexeme": "i32.const",
    "line": 4,
    "opcodeType": 55,
    "type": "CONST",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 92,
    "lexeme": "10",
    "line": 4,
    "opcodeType": null,
    "type": "NAT",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 107,
    "lexeme": "global.set",
    "line": 5,
    "opcodeType": 29,
    "type": "global.set",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 112,
    "lexeme": "$var",
    "line": 5,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 127,
    "lexeme": "global.get",
    "line": 6,
    "opcodeType": 28,
    "type": "global.get",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 132,
    "lexeme": "$var",
    "line": 6,
    "opcodeType": null,
    "type": "VAR",
    "valueType": null,
  },
  Token {
    "col": 0,
    "indexInSource": 136,
    "lexeme": ")",
    "line": 7,
    "opcodeType": null,
    "type": ")",
    "valueType": null,
  },
]
`;

exports[`snapshot tests variable expressions test parse tree 1`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  [
    Token {
      "col": 0,
      "indexInSource": 16,
      "lexeme": "func",
      "line": 2,
      "opcodeType": null,
      "type": "func",
      "valueType": 7,
    },
    Token {
      "col": 0,
      "indexInSource": 22,
      "lexeme": "$main",
      "line": 2,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 30,
        "lexeme": "result",
        "line": 2,
        "opcodeType": null,
        "type": "result",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 34,
        "lexeme": "i32",
        "line": 2,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    [
      Token {
        "col": 0,
        "indexInSource": 46,
        "lexeme": "local",
        "line": 3,
        "opcodeType": null,
        "type": "local",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 51,
        "lexeme": "$var",
        "line": 3,
        "opcodeType": null,
        "type": "VAR",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 55,
        "lexeme": "i32",
        "line": 3,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    Token {
      "col": 0,
      "indexInSource": 70,
      "lexeme": "i32.const",
      "line": 4,
      "opcodeType": 55,
      "type": "CONST",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 73,
      "lexeme": "10",
      "line": 4,
      "opcodeType": null,
      "type": "NAT",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 87,
      "lexeme": "local.set",
      "line": 5,
      "opcodeType": 26,
      "type": "local.set",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 92,
      "lexeme": "$var",
      "line": 5,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 106,
      "lexeme": "local.get",
      "line": 6,
      "opcodeType": 25,
      "type": "local.get",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 111,
      "lexeme": "$var",
      "line": 6,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
  ],
]
`;

exports[`snapshot tests variable expressions test parse tree 2`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  [
    Token {
      "col": 0,
      "indexInSource": 16,
      "lexeme": "func",
      "line": 2,
      "opcodeType": null,
      "type": "func",
      "valueType": 7,
    },
    Token {
      "col": 0,
      "indexInSource": 22,
      "lexeme": "$main",
      "line": 2,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 30,
        "lexeme": "result",
        "line": 2,
        "opcodeType": null,
        "type": "result",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 34,
        "lexeme": "i32",
        "line": 2,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    [
      Token {
        "col": 0,
        "indexInSource": 46,
        "lexeme": "local",
        "line": 3,
        "opcodeType": null,
        "type": "local",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 51,
        "lexeme": "$var",
        "line": 3,
        "opcodeType": null,
        "type": "VAR",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 55,
        "lexeme": "i32",
        "line": 3,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    [
      Token {
        "col": 0,
        "indexInSource": 71,
        "lexeme": "i32.const",
        "line": 4,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 74,
        "lexeme": "10",
        "line": 4,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
    ],
    Token {
      "col": 0,
      "indexInSource": 89,
      "lexeme": "local.tee",
      "line": 5,
      "opcodeType": 27,
      "type": "local.tee",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 94,
      "lexeme": "$var",
      "line": 5,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
  ],
]
`;

exports[`snapshot tests variable expressions test parse tree 3`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  [
    Token {
      "col": 0,
      "indexInSource": 18,
      "lexeme": "global",
      "line": 2,
      "opcodeType": null,
      "type": "global",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 23,
      "lexeme": "$one",
      "line": 2,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 27,
      "lexeme": "i32",
      "line": 2,
      "opcodeType": null,
      "type": "VALUETYPE",
      "valueType": 0,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 38,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 41,
        "lexeme": "10",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
    ],
  ],
  [
    Token {
      "col": 0,
      "indexInSource": 53,
      "lexeme": "global",
      "line": 3,
      "opcodeType": null,
      "type": "global",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 58,
      "lexeme": "$two",
      "line": 3,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 62,
      "lexeme": "i32",
      "line": 3,
      "opcodeType": null,
      "type": "VALUETYPE",
      "valueType": 0,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 73,
        "lexeme": "i32.const",
        "line": 3,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 76,
        "lexeme": "10",
        "line": 3,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
    ],
  ],
  [
    Token {
      "col": 0,
      "indexInSource": 86,
      "lexeme": "func",
      "line": 4,
      "opcodeType": null,
      "type": "func",
      "valueType": 7,
    },
    Token {
      "col": 0,
      "indexInSource": 92,
      "lexeme": "$main",
      "line": 4,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 100,
        "lexeme": "result",
        "line": 4,
        "opcodeType": null,
        "type": "result",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 104,
        "lexeme": "i32",
        "line": 4,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    Token {
      "col": 0,
      "indexInSource": 120,
      "lexeme": "global.get",
      "line": 5,
      "opcodeType": 28,
      "type": "global.get",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 125,
      "lexeme": "$one",
      "line": 5,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 140,
      "lexeme": "global.get",
      "line": 6,
      "opcodeType": 28,
      "type": "global.get",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 145,
      "lexeme": "$two",
      "line": 6,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 157,
      "lexeme": "i32.add",
      "line": 7,
      "opcodeType": 96,
      "type": "BINARY",
      "valueType": null,
    },
  ],
]
`;

exports[`snapshot tests variable expressions test parse tree 4`] = `
[
  Token {
    "col": 0,
    "indexInSource": 8,
    "lexeme": "module",
    "line": 1,
    "opcodeType": null,
    "type": "module",
    "valueType": null,
  },
  [
    Token {
      "col": 0,
      "indexInSource": 18,
      "lexeme": "global",
      "line": 2,
      "opcodeType": null,
      "type": "global",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 23,
      "lexeme": "$var",
      "line": 2,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 28,
        "lexeme": "mut",
        "line": 2,
        "opcodeType": null,
        "type": "mut",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 32,
        "lexeme": "i32",
        "line": 2,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    [
      Token {
        "col": 0,
        "indexInSource": 44,
        "lexeme": "i32.const",
        "line": 2,
        "opcodeType": 55,
        "type": "CONST",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 46,
        "lexeme": "0",
        "line": 2,
        "opcodeType": null,
        "type": "NAT",
        "valueType": null,
      },
    ],
  ],
  [
    Token {
      "col": 0,
      "indexInSource": 56,
      "lexeme": "func",
      "line": 3,
      "opcodeType": null,
      "type": "func",
      "valueType": 7,
    },
    Token {
      "col": 0,
      "indexInSource": 62,
      "lexeme": "$main",
      "line": 3,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    [
      Token {
        "col": 0,
        "indexInSource": 70,
        "lexeme": "result",
        "line": 3,
        "opcodeType": null,
        "type": "result",
        "valueType": null,
      },
      Token {
        "col": 0,
        "indexInSource": 74,
        "lexeme": "i32",
        "line": 3,
        "opcodeType": null,
        "type": "VALUETYPE",
        "valueType": 0,
      },
    ],
    Token {
      "col": 0,
      "indexInSource": 89,
      "lexeme": "i32.const",
      "line": 4,
      "opcodeType": 55,
      "type": "CONST",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 92,
      "lexeme": "10",
      "line": 4,
      "opcodeType": null,
      "type": "NAT",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 107,
      "lexeme": "global.set",
      "line": 5,
      "opcodeType": 29,
      "type": "global.set",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 112,
      "lexeme": "$var",
      "line": 5,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 127,
      "lexeme": "global.get",
      "line": 6,
      "opcodeType": 28,
      "type": "global.get",
      "valueType": null,
    },
    Token {
      "col": 0,
      "indexInSource": 132,
      "lexeme": "$var",
      "line": 6,
      "opcodeType": null,
      "type": "VAR",
      "valueType": null,
    },
  ],
]
`;
